kubernetes/apps/network/envoy-gateway/gateway/gatewayclass.yaml
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/gatewayclass_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  # This identifier tells Kubernetes that Envoy Gateway owns this class.
  # https://gateway.envoyproxy.io/docs/tasks/traffic/gatewayapi-support/
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    # Link to the EnvoyProxy resource that configures the data-plane
    # proxy pods (replicas, resources, service policy, shutdown).
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy
    namespace: network
